# hyperspot

./: AGENTS.md  CHANGELOG.md  Cargo.toml
modules/settings_service/: Cargo.toml
modules/settings_service/src/: config.rs  lib.rs  module.rs
modules/settings_service/src/api/: mod.rs
modules/settings_service/src/api/native/: client.rs  mod.rs
modules/settings_service/src/api/rest/: dto.rs  error.rs  handlers.rs  mapper.rs  mod.rs  routes.rs
modules/settings_service/src/contract/: client.rs  error.rs  mod.rs  model.rs
modules/settings_service/src/domain/: events.rs  hierarchy.rs  mod.rs  repository.rs  service.rs  validation.rs
modules/settings_service/src/infra/: mod.rs
modules/settings_service/src/infra/storage/: entity.rs  mapper.rs  mod.rs  repositories.rs
modules/settings_service/src/infra/storage/migrations/: mod.rs
modules/settings_service/tests/: README.md  gts_type_edge_cases_tests.rs  phase2_tests.rs  root_admin_override_tests.rs  service_tests.rs
modules/settings_service/tests/common/: mod.rs
openspec/: project.md
openspec/changes/add-root-admin-override-capability/: proposal.md
openspec/changes/add-tenant-hierarchy-integration/: proposal.md
openspec/changes/initial-settings-service/: design.md  tasks.md
openspec/changes/settings-service-add-root-admin-override-capability/: tasks.md
openspec/changes/settings-service-add-tenant-hierarchy-integration/: design.md  tasks.md
openspec/changes/settings-service-enhance-settings-inheritance/: proposal.md  tasks.md
openspec/changes/settings-service-initial-settings-service/: proposal.md
openspec/specs/documentation/: spec.md
openspec/specs/settings/: spec.md
(+7 files in other folders)
